# Eloverit

./: .replit  ELOQUAS_AI_ACCESS_GUIDE.md  LINKEDIN_SSO_SETUP_GUIDE.md  OUTBOUND_MVP_STATUS.md  RESEARCH_FILES_GUIDE.md  apollo-contacts-sample.csv  cookies.txt  emailer.py  jobs_scraper.py  linkedin_auth.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  run_eloquas.py  scoring.py  test-d365-messaging.js  test-workflow-export.xlsx  test_flask.py  trust_story_builder.py  twilio_helper.py  users.py
attached_assets/: D365 QA Automation: Downtime, Impact, and Strategic Messaging_1752374424138.gdoc  Pasted--Core-Requirements-1-Account-Research-Tab-Build-an-Account-Research-tab-that-clearly-displays-C-1752616386432_1752616386433.txt  Pasted--Dynamics-365-QA-Automation-Outreach-Content-Kit-Drop-in-copy-for-Email-LinkedIn--1752372705605_1752372705606.txt  Pasted--Eloquas-AI-Replit-Agent-Prompt-Add-TrustBuild-and-StoryBuild-Optional-Modes--1752174915011_1752174915011.txt  Pasted--Eloquas-AI-Replit-Agent-Prompt-Add-TrustBuild-and-StoryBuild-Optional-Modes--1752178000252_1752178000253.txt  Pasted--Eloquas-AI-Replit-Agent-Prompt-Add-TrustBuild-and-StoryBuild-Optional-Modes--1752182564047_1752182564048.txt  Pasted--Eloquas-Outreach-Engine-Unified-Code-File-v2-Includes-TrustBuilder-StoryBuilder-toggle--1753561427641_1753561427642.txt  Pasted--Eloverit-ai-Integration-Debugging-Instruction-Document-Role-and-Context-You-are-acting-as-a-1754599318620_1754599318621.txt  Raymond nooks list_1752602439395.csv  ZoomInfo-Intent-V1_1749652163971.xlsx  (+22 more)
client/: index.html
(+119 files in other folders)
