[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "lxml>=6.0.0",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "twilio>=9.6.4",
    "werkzeug>=3.1.3",
]
